Desarrollo Modulo de Instructores

--- a/SENA_APP/aprendices/Templates/main.html
+++ b/SENA_APP/aprendices/Templates/main.html
@@ -14,7 +14,7 @@
             <a href="/aprendices" class="btn btn-hero-primary">
               <i class="fas fa-users"></i> Ver Aprendices
             </a>
-            <a href="#features" class="btn btn-hero-secondary">
+            <a href="/instructores" class="btn btn-hero-secondary">
               <i class="fas fa-info-circle"></i> Ver Instructores
             </a>
           </div>
