Desarrollo Modulo de Programas

--- a/SENA_APP/aprendices/Templates/main.html
+++ b/SENA_APP/aprendices/Templates/main.html
@@ -17,6 +17,10 @@
             <a href="/instructores" class="btn btn-hero-secondary">
               <i class="fas fa-info-circle"></i> Ver Instructores
             </a>
+            <a href="/programas" class="btn btn-hero-secondary">
+              <i class="fas fa-graduation-cap"></i> Ver Programas
+            </a>
+
           </div>
         </div>
       </div>
