--- a/SENA_APP/aprendices/Templates/master.html
+++ b/SENA_APP/aprendices/Templates/master.html
@@ -51,6 +51,11 @@
               <i class="fas fa-chalkboard-teacher"></i> Instructores
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link {% if 'programas' in request.path %}active{% endif %}" href="/programas">
+              <i class="fas fa-graduation-cap"></i> Programas
+            </a>
+          </li>
         </ul>
 
         <!-- Botón Admin -->
