--- a/SENA_APP/aprendices/Templates/master.html
+++ b/SENA_APP/aprendices/Templates/master.html
@@ -9,7 +9,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}SENA - Gestión de Aprendices{% endblock %}</title>
-  {% load bootstrap5 %}
+  {% load django_bootstrap5 %}
   {% bootstrap_css %}
   {% bootstrap_javascript %}
   
@@ -54,6 +54,11 @@
           <li class="nav-item">
             <a class="nav-link {% if 'programas' in request.path %}active{% endif %}" href="/programas">
               <i class="fas fa-graduation-cap"></i> Programas
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if 'cursos' in request.path %}active{% endif %}" href="/cursos">
+              <i class="fas fa-book"></i> Cursos
             </a>
           </li>
         </ul>
