--- a/SENA_APP/aprendices/Templates/editar_aprendiz.html
+++ b/SENA_APP/aprendices/Templates/editar_aprendiz.html
@@ -213,7 +213,7 @@
                 <button type="submit" class="btn-save">Guardar Aprendiz</button>
                 
                 <!-- Botón de CANCELAR / VOLVER -->
-                <a href="{% url 'lista_aprendices' %}">
+                <a href="{% url 'aprendices:lista_aprendices' %}">
                     <button type="button" class="btn-cancel">Cancelar</button>
                 </a>
             </div>
