--- a/SENA_APP/cursos/templates/detalle_curso.html
+++ b/SENA_APP/cursos/templates/detalle_curso.html
@@ -77,7 +77,7 @@
           <div class="label">Instructor Coordinador</div>
           <div class="value">
             {% if curso.instructor_coordinador %}
-              <a href="{% url 'detalle_instructor' curso.instructor_coordinador.id %}" style="color:#39A900; text-decoration:none;">
+              <a href="{% url 'instructores:detalle_instructor' curso.instructor_coordinador.id %}" style="color:#39A900; text-decoration:none;">
                 {{ curso.instructor_coordinador.nombre }} {{ curso.instructor_coordinador.apellido }}
               </a>
             {% else %}
