Modificacion en archivos

--- a/SENA_APP/instructores/templates/detalle_instructores.html
+++ b/SENA_APP/instructores/templates/detalle_instructores.html
@@ -191,7 +191,7 @@
     </div>
 
     <div class="actions">
-      <a href="{% url 'lista_instructores' %}" class="btn-sena">
+      <a href="{% url 'instructores:lista_instructores' %}" class="btn-sena">
         <i class="bi bi-arrow-left-circle"></i> Volver al Listado
       </a>
     </div>
