Modificacion en archivos programas

--- a/SENA_APP/programas/templates/detalles_programa.html
+++ b/SENA_APP/programas/templates/detalles_programa.html
@@ -174,7 +174,7 @@
     </div>
 
     <div class="actions">
-      <a href="{% url 'lista_programas' %}" class="btn-sena">
+      <a href="{% url 'programas:lista_programas' %}" class="btn-sena">
         <i class="bi bi-arrow-left-circle"></i> Volver al Listado
       </a>
     </div>
